--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,6 +40,21 @@
     <!--START-->
     <string name="email_sent_success">\"Email sent successfully to reset your password! \"</string>
     <string name="please_click_back_again_to_exit">Click back again to exit</string>
+
+    <string name="register_success">You are registered successfully.</string>
+
+    <string name="title_complete_profile">COMPLETE PROFILE</string>
+    <string name="et_hint_mobile_number">Mobile Number</string>
+
+    <string name="read_storage_permission_denied">Oops, you just denied the permission for storage. You can also allow it from settings.</string>
+    <string name="image_selection_failed">Image selection Failed!</string>
+
+    <string name="err_msg_enter_mobile_number">Please enter mobile number.</string>
+
+    <!--TODO Step 8: Add the string resources in the strings.xml file-->
+    <!--START-->
+    <string name="msg_profile_update_success">Your profile is updated successfully.</string>
+
     <!--END-->
 
 </resources>
